# capi-gain-ares

./: CMakeLists.txt  ReadMe.txt
acdb/: acdb_cal.acdb  gain_module_api.xml  kvh2xml.xml  workspaceFile.qwsp
acdb/so/signed/: Elfsigner_log.txt
api/: gain_module_api.h
capi/src/: capi_gain.c  capi_gain_utils.c  capi_gain_utils.h
